<resources>
    <string name="app_name">Devils Planet</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email (required)</string>
    <string name="prompt_password">Password (required)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tab_1">Home</string>
    <string name="tab_2">Profile</string>
    <string name="tab_3">Calendar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="news_header">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="news_details">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham. Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="logout">Log Out</string>
    <string name="facebook_app_id">1822531264688931</string>

    <string name="fb_login_protocol_scheme">fb1822531264688931</string>
    <string name="server_client_id">782159066220-ee9coq2p7jhd4sqrh5449q5672v59150.apps.googleusercontent.com</string>


    <string name="share_title">Share with your pals...</string>
    <string name="credits">Credits</string>
    <string name="help">Help</string>
    <string name="contact_us">For queries, complaints or any matter regarding
        Devils Planet please fill in the fields bellow and we will
        get back to you. Have a lovely day :)
    </string>
    <string name="name">Name (required)</string>
    <string name="comment">Comment (require)</string>
    <string name="ok">OK</string>
    <string name="developer_android">Developer (Android) : Roger Nkosi</string>
    <string name="content_provider">Content Provider : Roger Nkosi</string>
    <string name="developer_web">Developer (Web Services) : Roger Nkosi</string>
    <string name="database">Database Admin : Roger Nkosi</string>
    <string name="special_thanks">A special thanks to:
        \nGeoff Seloana for allowing us to use his (Google developer) account for the time being.
        \nAll the guys on social media for all their support and mostly for allowing us to use their social media content (images and text) on Devils Planet.
    </string>
    <string name="title_activity_help">Help</string>
    <string name="home_help">Q: I open my Devils Planet app and I do not see any data what should I do?</string>
    <string name="answer_home">A: RUN, or you can just swipe down with your thumb to refresh the data, make sure your device have an active internet connection.</string>
    <string name="f_match">Q: I do not see any match info on the \"Featured Match\" area what should I do?</string>
    <string name="f_answer">A: Again, make sure you have an active internet connection, then tap on the red empty space to make a new request to the server and make a few seconds.</string>
    <string name="live_score">Q: I do not see the live match score, what should I do?</string>
    <string name="title_activity_splash">Splash</string>
    <string name="welcome">Welcome!</string>
    <string name="send">SEND</string>


</resources>
