<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="11dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nkosi.roger.manutdcom.view.Credits"
    tools:showIn="@layout/activity_help">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_android"
        android:textSize="15dp" />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_web"
        android:textSize="15dp" />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_provider"
        android:textSize="15dp" />



    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/database"
        android:textSize="15dp" />

    <TextView
        android:layout_marginTop="5dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/special_thanks"
        android:textSize="15dp" />

</LinearLayout>