<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="11dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nkosi.roger.manutdcom.view.Help"
    tools:showIn="@layout/activity_help">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_help"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"

        android:layout_height="wrap_content"
        android:text="@string/answer_home"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"

        android:layout_height="wrap_content"
        android:text="@string/f_match"
        android:textSize="15dp" />

    <TextView
        android:layout_marginTop="5dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_answer"
        android:textSize="15dp" />

    <TextView
        android:layout_marginTop="5dp"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/live_score" />

    <TextView
        android:layout_marginTop="5dp"
        android:textSize="15dp"
        android:text="@string/f_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
